// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Materials Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 36.5,
        },
        {
          "entities": [
            "material",
          ],
          "id": 2,
          "max_length": null,
          "name": "Couleur",
          "type": "string",
          "value": "Grise",
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 850,
        },
      ],
      "available_quantity": 4,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
      "degressive_rate_id": 3,
      "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
      "id": 1,
      "is_deleted": false,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "name": "Console Yamaha CL3",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": "http://loxya.test/materials/1/picture",
      "reference": "CL3",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "19400",
      "stock_quantity": 5,
      "sub_category_id": 1,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 2.2,
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 35,
        },
      ],
      "available_quantity": 2,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
      "degressive_rate_id": null,
      "description": "Système de diffusion numérique",
      "id": 2,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "Processeur DBX PA2",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "reference": "DBXPA2",
      "rental_price": /* Decimal Instance => */ "25.5",
      "replacement_price": /* Decimal Instance => */ "349.9",
      "stock_quantity": 2,
      "sub_category_id": 2,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 0.85,
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 150,
        },
      ],
      "available_quantity": 30,
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
      "degressive_rate_id": 1,
      "description": "Projecteur PAR64 à LED, avec son set de gélatines",
      "id": 3,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "PAR64 LED",
      "note": "Soyez délicats avec ces projos !",
      "out_of_order_quantity": 4,
      "park_id": 1,
      "picture": null,
      "reference": "PAR64LED",
      "rental_price": /* Decimal Instance => */ "3.5",
      "replacement_price": /* Decimal Instance => */ "89",
      "stock_quantity": 34,
      "sub_category_id": 3,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "tax_id": null,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 3.15,
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 60,
        },
        {
          "entities": [
            "material",
          ],
          "id": 4,
          "name": "Conforme",
          "type": "boolean",
          "value": true,
        },
      ],
      "available_quantity": 2,
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
      "degressive_rate_id": 1,
      "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
      "id": 4,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "Showtec SDS-6",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "reference": "SDS-6-01",
      "rental_price": /* Decimal Instance => */ "15.95",
      "replacement_price": /* Decimal Instance => */ "59",
      "stock_quantity": 2,
      "sub_category_id": 4,
      "tags": [],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
    },
    {
      "attributes": [],
      "available_quantity": 32,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
      "degressive_rate_id": 3,
      "description": "Câble audio XLR 10 mètres, mâle-femelle",
      "id": 5,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": true,
      "name": "Câble XLR 10m",
      "note": null,
      "out_of_order_quantity": 8,
      "park_id": 1,
      "picture": null,
      "reference": "XLR10",
      "rental_price": /* Decimal Instance => */ "0.5",
      "replacement_price": /* Decimal Instance => */ "9.5",
      "stock_quantity": 40,
      "sub_category_id": null,
      "tags": [],
      "tax_id": 2,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
            "material",
          ],
          "id": 5,
          "name": "Date d'achat",
          "type": "date",
          "value": /* Day Instance => */ "2021-01-28",
        },
      ],
      "available_quantity": 2,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
      "degressive_rate_id": 1,
      "description": "Mélangeur numérique 18 canaux",
      "id": 6,
      "is_deleted": false,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "name": "Behringer X Air XR18",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": null,
      "reference": "XR18",
      "rental_price": /* Decimal Instance => */ "49.99",
      "replacement_price": /* Decimal Instance => */ "419",
      "stock_quantity": 3,
      "sub_category_id": 1,
      "tags": [],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
    },
    {
      "attributes": [],
      "available_quantity": 2,
      "category_id": 3,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
      "degressive_rate_id": 2,
      "description": "Volume utile: 9.3 m3",
      "id": 7,
      "is_deleted": false,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "name": "Volkswagen Transporter",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 2,
      "picture": null,
      "reference": "Transporter",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "32000",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "tax_id": null,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
    },
    {
      "attributes": [],
      "available_quantity": 2,
      "category_id": 4,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
      "degressive_rate_id": 3,
      "description": "Forêt mystique, typique des récits fantastiques.",
      "id": 8,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "Décor Thème Forêt",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "reference": "Decor-Forest",
      "rental_price": /* Decimal Instance => */ "1500",
      "replacement_price": /* Decimal Instance => */ "8500",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "tax_id": 4,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 8,
    "total": {
      "items": 8,
      "pages": 1,
    },
  },
}
`;

exports[`Materials Api all() parse the returned data correctly 2`] = `
{
  "data": [
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 36.5,
        },
        {
          "entities": [
            "material",
          ],
          "id": 2,
          "max_length": null,
          "name": "Couleur",
          "type": "string",
          "value": "Grise",
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 850,
        },
      ],
      "available_quantity": 4,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
      "degressive_rate_id": 3,
      "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
      "id": 1,
      "is_deleted": false,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "name": "Console Yamaha CL3",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": "http://loxya.test/materials/1/picture",
      "reference": "CL3",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "19400",
      "stock_quantity": 5,
      "sub_category_id": 1,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 2.2,
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 35,
        },
      ],
      "available_quantity": 2,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
      "degressive_rate_id": null,
      "description": "Système de diffusion numérique",
      "id": 2,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "Processeur DBX PA2",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "reference": "DBXPA2",
      "rental_price": /* Decimal Instance => */ "25.5",
      "replacement_price": /* Decimal Instance => */ "349.9",
      "stock_quantity": 2,
      "sub_category_id": 2,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 0.85,
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 150,
        },
      ],
      "available_quantity": 30,
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
      "degressive_rate_id": 1,
      "description": "Projecteur PAR64 à LED, avec son set de gélatines",
      "id": 3,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "PAR64 LED",
      "note": "Soyez délicats avec ces projos !",
      "out_of_order_quantity": 4,
      "park_id": 1,
      "picture": null,
      "reference": "PAR64LED",
      "rental_price": /* Decimal Instance => */ "3.5",
      "replacement_price": /* Decimal Instance => */ "89",
      "stock_quantity": 34,
      "sub_category_id": 3,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "tax_id": null,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
          ],
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 3.15,
        },
        {
          "entities": [
            "material",
          ],
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 60,
        },
        {
          "entities": [
            "material",
          ],
          "id": 4,
          "name": "Conforme",
          "type": "boolean",
          "value": true,
        },
      ],
      "available_quantity": 2,
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
      "degressive_rate_id": 1,
      "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
      "id": 4,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "Showtec SDS-6",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "reference": "SDS-6-01",
      "rental_price": /* Decimal Instance => */ "15.95",
      "replacement_price": /* Decimal Instance => */ "59",
      "stock_quantity": 2,
      "sub_category_id": 4,
      "tags": [],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
    },
    {
      "attributes": [],
      "available_quantity": 32,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
      "degressive_rate_id": 3,
      "description": "Câble audio XLR 10 mètres, mâle-femelle",
      "id": 5,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": true,
      "name": "Câble XLR 10m",
      "note": null,
      "out_of_order_quantity": 8,
      "park_id": 1,
      "picture": null,
      "reference": "XLR10",
      "rental_price": /* Decimal Instance => */ "0.5",
      "replacement_price": /* Decimal Instance => */ "9.5",
      "stock_quantity": 40,
      "sub_category_id": null,
      "tags": [],
      "tax_id": 2,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
    },
    {
      "attributes": [
        {
          "entities": [
            "material",
            "material",
          ],
          "id": 5,
          "name": "Date d'achat",
          "type": "date",
          "value": /* Day Instance => */ "2021-01-28",
        },
      ],
      "available_quantity": 2,
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
      "degressive_rate_id": 1,
      "description": "Mélangeur numérique 18 canaux",
      "id": 6,
      "is_deleted": false,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "name": "Behringer X Air XR18",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": null,
      "reference": "XR18",
      "rental_price": /* Decimal Instance => */ "49.99",
      "replacement_price": /* Decimal Instance => */ "419",
      "stock_quantity": 3,
      "sub_category_id": 1,
      "tags": [],
      "tax_id": 1,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
    },
    {
      "attributes": [],
      "available_quantity": 2,
      "category_id": 3,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
      "degressive_rate_id": 2,
      "description": "Volume utile: 9.3 m3",
      "id": 7,
      "is_deleted": false,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "name": "Volkswagen Transporter",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 2,
      "picture": null,
      "reference": "Transporter",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "32000",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "tax_id": null,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
    },
    {
      "attributes": [],
      "available_quantity": 2,
      "category_id": 4,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
      "degressive_rate_id": 3,
      "description": "Forêt mystique, typique des récits fantastiques.",
      "id": 8,
      "is_deleted": false,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "name": "Décor Thème Forêt",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "reference": "Decor-Forest",
      "rental_price": /* Decimal Instance => */ "1500",
      "replacement_price": /* Decimal Instance => */ "8500",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "tax_id": 4,
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 8,
    "total": {
      "items": 8,
      "pages": 1,
    },
  },
}
`;

exports[`Materials Api all() parse the returned data correctly 3`] = `
[
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 36.5,
      },
      {
        "entities": [
          "material",
        ],
        "id": 2,
        "max_length": null,
        "name": "Couleur",
        "type": "string",
        "value": "Grise",
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 850,
      },
    ],
    "available_quantity": 4,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    "degressive_rate_id": 3,
    "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
    "id": 1,
    "is_deleted": false,
    "is_discountable": false,
    "is_hidden_on_bill": false,
    "name": "Console Yamaha CL3",
    "note": null,
    "out_of_order_quantity": 1,
    "park_id": 1,
    "picture": "http://loxya.test/materials/1/picture",
    "reference": "CL3",
    "rental_price": /* Decimal Instance => */ "300",
    "replacement_price": /* Decimal Instance => */ "19400",
    "stock_quantity": 5,
    "sub_category_id": 1,
    "tags": [
      {
        "id": 1,
        "name": "Premium",
      },
    ],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 2.2,
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 35,
      },
    ],
    "available_quantity": 2,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
    "degressive_rate_id": null,
    "description": "Système de diffusion numérique",
    "id": 2,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "Processeur DBX PA2",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 1,
    "picture": null,
    "reference": "DBXPA2",
    "rental_price": /* Decimal Instance => */ "25.5",
    "replacement_price": /* Decimal Instance => */ "349.9",
    "stock_quantity": 2,
    "sub_category_id": 2,
    "tags": [
      {
        "id": 1,
        "name": "Premium",
      },
    ],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 0.85,
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 150,
      },
    ],
    "available_quantity": 30,
    "category_id": 2,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    "degressive_rate_id": 1,
    "description": "Projecteur PAR64 à LED, avec son set de gélatines",
    "id": 3,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "PAR64 LED",
    "note": "Soyez délicats avec ces projos !",
    "out_of_order_quantity": 4,
    "park_id": 1,
    "picture": null,
    "reference": "PAR64LED",
    "rental_price": /* Decimal Instance => */ "3.5",
    "replacement_price": /* Decimal Instance => */ "89",
    "stock_quantity": 34,
    "sub_category_id": 3,
    "tags": [
      {
        "id": 1,
        "name": "Premium",
      },
    ],
    "tax_id": null,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 3.15,
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 60,
      },
      {
        "entities": [
          "material",
        ],
        "id": 4,
        "name": "Conforme",
        "type": "boolean",
        "value": true,
      },
    ],
    "available_quantity": 2,
    "category_id": 2,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
    "degressive_rate_id": 1,
    "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
    "id": 4,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "Showtec SDS-6",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 1,
    "picture": null,
    "reference": "SDS-6-01",
    "rental_price": /* Decimal Instance => */ "15.95",
    "replacement_price": /* Decimal Instance => */ "59",
    "stock_quantity": 2,
    "sub_category_id": 4,
    "tags": [],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
  },
  {
    "attributes": [],
    "available_quantity": 32,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
    "degressive_rate_id": 3,
    "description": "Câble audio XLR 10 mètres, mâle-femelle",
    "id": 5,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": true,
    "name": "Câble XLR 10m",
    "note": null,
    "out_of_order_quantity": 8,
    "park_id": 1,
    "picture": null,
    "reference": "XLR10",
    "rental_price": /* Decimal Instance => */ "0.5",
    "replacement_price": /* Decimal Instance => */ "9.5",
    "stock_quantity": 40,
    "sub_category_id": null,
    "tags": [],
    "tax_id": 2,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
          "material",
        ],
        "id": 5,
        "name": "Date d'achat",
        "type": "date",
        "value": /* Day Instance => */ "2021-01-28",
      },
    ],
    "available_quantity": 2,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
    "degressive_rate_id": 1,
    "description": "Mélangeur numérique 18 canaux",
    "id": 6,
    "is_deleted": false,
    "is_discountable": false,
    "is_hidden_on_bill": false,
    "name": "Behringer X Air XR18",
    "note": null,
    "out_of_order_quantity": 1,
    "park_id": 1,
    "picture": null,
    "reference": "XR18",
    "rental_price": /* Decimal Instance => */ "49.99",
    "replacement_price": /* Decimal Instance => */ "419",
    "stock_quantity": 3,
    "sub_category_id": 1,
    "tags": [],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
  },
  {
    "attributes": [],
    "available_quantity": 2,
    "category_id": 3,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
    "degressive_rate_id": 2,
    "description": "Volume utile: 9.3 m3",
    "id": 7,
    "is_deleted": false,
    "is_discountable": false,
    "is_hidden_on_bill": false,
    "name": "Volkswagen Transporter",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 2,
    "picture": null,
    "reference": "Transporter",
    "rental_price": /* Decimal Instance => */ "300",
    "replacement_price": /* Decimal Instance => */ "32000",
    "stock_quantity": 2,
    "sub_category_id": null,
    "tags": [],
    "tax_id": null,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
  },
  {
    "attributes": [],
    "available_quantity": 2,
    "category_id": 4,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
    "degressive_rate_id": 3,
    "description": "Forêt mystique, typique des récits fantastiques.",
    "id": 8,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "Décor Thème Forêt",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 1,
    "picture": null,
    "reference": "Decor-Forest",
    "rental_price": /* Decimal Instance => */ "1500",
    "replacement_price": /* Decimal Instance => */ "8500",
    "stock_quantity": 2,
    "sub_category_id": null,
    "tags": [],
    "tax_id": 4,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
  },
]
`;

exports[`Materials Api allWhileEvent() parse the returned data correctly 1`] = `
[
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 36.5,
      },
      {
        "entities": [
          "material",
        ],
        "id": 2,
        "max_length": null,
        "name": "Couleur",
        "type": "string",
        "value": "Grise",
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 850,
      },
    ],
    "available_quantity": 4,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    "degressive_rate": /* Decimal Instance => */ "6",
    "degressive_rate_id": 3,
    "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
    "id": 1,
    "is_deleted": false,
    "is_discountable": false,
    "is_hidden_on_bill": false,
    "name": "Console Yamaha CL3",
    "note": null,
    "out_of_order_quantity": 1,
    "park_id": 1,
    "picture": "http://loxya.test/materials/1/picture",
    "reference": "CL3",
    "rental_price": /* Decimal Instance => */ "300",
    "rental_price_period": /* Decimal Instance => */ "1800",
    "replacement_price": /* Decimal Instance => */ "19400",
    "stock_quantity": 5,
    "sub_category_id": 1,
    "tags": [
      {
        "id": 1,
        "name": "Premium",
      },
    ],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 2.2,
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 35,
      },
    ],
    "available_quantity": 2,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
    "degressive_rate": /* Decimal Instance => */ "1",
    "degressive_rate_id": null,
    "description": "Système de diffusion numérique",
    "id": 2,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "Processeur DBX PA2",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 1,
    "picture": null,
    "reference": "DBXPA2",
    "rental_price": /* Decimal Instance => */ "25.5",
    "rental_price_period": /* Decimal Instance => */ "25.5",
    "replacement_price": /* Decimal Instance => */ "349.9",
    "stock_quantity": 2,
    "sub_category_id": 2,
    "tags": [
      {
        "id": 1,
        "name": "Premium",
      },
    ],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 0.85,
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 150,
      },
    ],
    "available_quantity": 30,
    "category_id": 2,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    "degressive_rate": /* Decimal Instance => */ "1",
    "degressive_rate_id": 1,
    "description": "Projecteur PAR64 à LED, avec son set de gélatines",
    "id": 3,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "PAR64 LED",
    "note": "Soyez délicats avec ces projos !",
    "out_of_order_quantity": 4,
    "park_id": 1,
    "picture": null,
    "reference": "PAR64LED",
    "rental_price": /* Decimal Instance => */ "3.5",
    "rental_price_period": /* Decimal Instance => */ "3.5",
    "replacement_price": /* Decimal Instance => */ "89",
    "stock_quantity": 34,
    "sub_category_id": 3,
    "tags": [
      {
        "id": 1,
        "name": "Premium",
      },
    ],
    "tax_id": null,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
        ],
        "id": 1,
        "is_totalisable": true,
        "name": "Poids",
        "type": "float",
        "unit": "kg",
        "value": 3.15,
      },
      {
        "entities": [
          "material",
        ],
        "id": 3,
        "is_totalisable": true,
        "name": "Puissance",
        "type": "integer",
        "unit": "W",
        "value": 60,
      },
      {
        "entities": [
          "material",
        ],
        "id": 4,
        "name": "Conforme",
        "type": "boolean",
        "value": true,
      },
    ],
    "available_quantity": 2,
    "category_id": 2,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
    "degressive_rate": /* Decimal Instance => */ "1.25",
    "degressive_rate_id": 1,
    "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
    "id": 4,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "Showtec SDS-6",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 1,
    "picture": null,
    "reference": "SDS-6-01",
    "rental_price": /* Decimal Instance => */ "15.95",
    "rental_price_period": /* Decimal Instance => */ "19.94",
    "replacement_price": /* Decimal Instance => */ "59",
    "stock_quantity": 2,
    "sub_category_id": 4,
    "tags": [],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
  },
  {
    "attributes": [],
    "available_quantity": 32,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
    "degressive_rate": /* Decimal Instance => */ "1",
    "degressive_rate_id": 3,
    "description": "Câble audio XLR 10 mètres, mâle-femelle",
    "id": 5,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": true,
    "name": "Câble XLR 10m",
    "note": null,
    "out_of_order_quantity": 8,
    "park_id": 1,
    "picture": null,
    "reference": "XLR10",
    "rental_price": /* Decimal Instance => */ "0.5",
    "rental_price_period": /* Decimal Instance => */ "0.5",
    "replacement_price": /* Decimal Instance => */ "9.5",
    "stock_quantity": 40,
    "sub_category_id": null,
    "tags": [],
    "tax_id": 2,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
  },
  {
    "attributes": [
      {
        "entities": [
          "material",
          "material",
        ],
        "id": 5,
        "name": "Date d'achat",
        "type": "date",
        "value": /* Day Instance => */ "2021-01-28",
      },
    ],
    "available_quantity": 2,
    "category_id": 1,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
    "degressive_rate": /* Decimal Instance => */ "1.5",
    "degressive_rate_id": 1,
    "description": "Mélangeur numérique 18 canaux",
    "id": 6,
    "is_deleted": false,
    "is_discountable": false,
    "is_hidden_on_bill": false,
    "name": "Behringer X Air XR18",
    "note": null,
    "out_of_order_quantity": 1,
    "park_id": 1,
    "picture": null,
    "reference": "XR18",
    "rental_price": /* Decimal Instance => */ "49.99",
    "rental_price_period": /* Decimal Instance => */ "74.99",
    "replacement_price": /* Decimal Instance => */ "419",
    "stock_quantity": 3,
    "sub_category_id": 1,
    "tags": [],
    "tax_id": 1,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
  },
  {
    "attributes": [],
    "available_quantity": 2,
    "category_id": 3,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
    "degressive_rate": /* Decimal Instance => */ "3",
    "degressive_rate_id": 2,
    "description": "Volume utile: 9.3 m3",
    "id": 7,
    "is_deleted": false,
    "is_discountable": false,
    "is_hidden_on_bill": false,
    "name": "Volkswagen Transporter",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 2,
    "picture": null,
    "reference": "Transporter",
    "rental_price": /* Decimal Instance => */ "300",
    "rental_price_period": /* Decimal Instance => */ "900",
    "replacement_price": /* Decimal Instance => */ "32000",
    "stock_quantity": 2,
    "sub_category_id": null,
    "tags": [],
    "tax_id": null,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
  },
  {
    "attributes": [],
    "available_quantity": 2,
    "category_id": 4,
    "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
    "degressive_rate": /* Decimal Instance => */ "1",
    "degressive_rate_id": 3,
    "description": "Forêt mystique, typique des récits fantastiques.",
    "id": 8,
    "is_deleted": false,
    "is_discountable": true,
    "is_hidden_on_bill": false,
    "name": "Décor Thème Forêt",
    "note": null,
    "out_of_order_quantity": 0,
    "park_id": 1,
    "picture": null,
    "reference": "Decor-Forest",
    "rental_price": /* Decimal Instance => */ "1500",
    "rental_price_period": /* Decimal Instance => */ "1500",
    "replacement_price": /* Decimal Instance => */ "8500",
    "stock_quantity": 2,
    "sub_category_id": null,
    "tags": [],
    "tax_id": 4,
    "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
  },
]
`;

exports[`Materials Api attachDocument() parse the returned data correctly (with document #1) 1`] = `
{
  "created_at": /* DateTime Instance => */ "2021-02-12 13:23:02",
  "id": 1,
  "name": "User-manual.pdf",
  "size": 24681233,
  "type": "application/pdf",
  "url": "http://loxya.test/documents/1",
}
`;

exports[`Materials Api attachDocument() parse the returned data correctly (with document #2) 1`] = `
{
  "created_at": /* DateTime Instance => */ "2021-02-12 13:25:02",
  "id": 2,
  "name": "warranty.pdf",
  "size": 124068,
  "type": "application/pdf",
  "url": "http://loxya.test/documents/2",
}
`;

exports[`Materials Api attachDocument() parse the returned data correctly (with document #3) 1`] = `
{
  "created_at": /* DateTime Instance => */ "2023-05-01 15:15:20",
  "id": 3,
  "name": "plan-de-salle.xls",
  "size": 49802,
  "type": "application/vnd.ms-excel",
  "url": "http://loxya.test/documents/3",
}
`;

exports[`Materials Api attachDocument() parse the returned data correctly (with document #4) 1`] = `
{
  "created_at": /* DateTime Instance => */ "2023-05-02 17:32:05",
  "id": 4,
  "name": "Carte de l'étudiant.png",
  "size": 9397,
  "type": "image/x-png",
  "url": "http://loxya.test/documents/4",
}
`;

exports[`Materials Api attachDocument() parse the returned data correctly (with document #5) 1`] = `
{
  "created_at": /* DateTime Instance => */ "2023-05-01 15:15:20",
  "id": 5,
  "name": "bon_de_sortie.doc",
  "size": 10014149,
  "type": "application/msword",
  "url": "http://loxya.test/documents/5",
}
`;

exports[`Materials Api attachDocument() parse the returned data correctly (with document #6) 1`] = `
{
  "created_at": /* DateTime Instance => */ "2023-05-01 15:15:20",
  "id": 6,
  "name": "emploi-du-temps.xls",
  "size": 70001,
  "type": "application/vnd.ms-excel",
  "url": "http://loxya.test/documents/6",
}
`;

exports[`Materials Api bookings() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [
        {
          "company": {
            "country": {
              "code": "FR",
              "id": 1,
              "name": "France",
            },
            "country_id": 1,
            "full_address": "1, company st.
1234 Megacity",
            "id": 1,
            "legal_name": "Testing, Inc",
            "locality": "Megacity",
            "note": "Just for tests",
            "phone": "+4123456789",
            "postal_code": "1234",
            "street": "1, company st.",
          },
          "company_id": 1,
          "country": {
            "code": "FR",
            "id": 1,
            "name": "France",
          },
          "country_id": 1,
          "email": "tester@robertmanager.net",
          "first_name": "Jean",
          "full_address": "1, somewhere av.
1234 Megacity",
          "full_name": "Jean Fountain",
          "id": 1,
          "last_name": "Fountain",
          "locality": "Megacity",
          "note": null,
          "phone": null,
          "postal_code": "1234",
          "reference": "0001",
          "street": "1, somewhere av.",
          "user_id": 1,
        },
      ],
      "categories": [
        1,
        2,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2018-12-01 12:50:45",
      "description": null,
      "entity": "event",
      "has_missing_materials": null,
      "has_not_returned_materials": false,
      "has_unassigned_mandatory_positions": false,
      "id": 1,
      "is_archived": false,
      "is_billable": true,
      "is_confirmed": false,
      "is_departure_inventory_done": true,
      "is_return_inventory_done": true,
      "location": "Gap",
      "manager": {
        "email": "tester2@robertmanager.net",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "group": "management",
        "id": 2,
        "last_name": "Rabbit",
        "phone": null,
        "pseudo": "test2",
      },
      "materials_count": 3,
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-19 00:00:00",
        "isFullDays": false,
        "start": "2018-12-16 15:45:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-18 18:00:00",
        "isFullDays": false,
        "start": "2018-12-17 10:00:00",
      },
      "parks": [
        1,
      ],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [
        {
          "event_id": 1,
          "id": 1,
          "period": /* Period Instance => */ {
            "end": "2018-12-18 22:00:00",
            "isFullDays": false,
            "start": "2018-12-17 09:00:00",
          },
          "role": {
            "id": 1,
            "is_used": true,
            "name": "Régisseur",
          },
          "technician": {
            "country": null,
            "country_id": null,
            "email": "tester2@robertmanager.net",
            "first_name": "Roger",
            "full_address": null,
            "full_name": "Roger Rabbit",
            "id": 1,
            "last_name": "Rabbit",
            "locality": null,
            "nickname": "Riri",
            "note": null,
            "phone": null,
            "postal_code": null,
            "roles": [
              {
                "id": 1,
                "is_used": true,
                "name": "Régisseur",
              },
              {
                "id": 3,
                "is_used": true,
                "name": "Ingénieur du son",
              },
            ],
            "street": null,
            "user_id": 2,
          },
          "technician_id": 1,
        },
        {
          "event_id": 1,
          "id": 2,
          "period": /* Period Instance => */ {
            "end": "2018-12-18 18:00:00",
            "isFullDays": false,
            "start": "2018-12-18 14:00:00",
          },
          "role": {
            "id": 2,
            "is_used": true,
            "name": "Technicien plateau",
          },
          "technician": {
            "country": {
              "code": "CH",
              "id": 2,
              "name": "Suisse",
            },
            "country_id": 2,
            "email": "client@technicien.com",
            "first_name": "Jean",
            "full_address": null,
            "full_name": "Jean Technicien",
            "id": 2,
            "last_name": "Technicien",
            "locality": null,
            "nickname": null,
            "note": null,
            "phone": "+33645698520",
            "postal_code": null,
            "roles": [
              {
                "id": 2,
                "is_used": true,
                "name": "Technicien plateau",
              },
            ],
            "street": null,
            "user_id": null,
          },
          "technician_id": 2,
        },
      ],
      "title": "Premier événement",
    },
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [
        {
          "company": null,
          "company_id": null,
          "country": null,
          "country_id": null,
          "email": "client@beneficiaires.com",
          "first_name": "Client",
          "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
          "full_name": "Client Benef",
          "id": 3,
          "last_name": "Benef",
          "locality": "Wazzaville",
          "note": null,
          "phone": "+33123456789",
          "postal_code": "88080",
          "reference": "0003",
          "street": "156 bis, avenue des tests poussés",
          "user_id": null,
        },
      ],
      "categories": [
        1,
      ],
      "color": /* Color Instance => */ "#ffba49",
      "created_at": /* DateTime Instance => */ "2018-12-16 12:50:45",
      "description": null,
      "entity": "event",
      "has_missing_materials": null,
      "has_not_returned_materials": true,
      "has_unassigned_mandatory_positions": true,
      "id": 2,
      "is_archived": false,
      "is_billable": true,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": true,
      "location": "Lyon",
      "manager": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "materials_count": 5,
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-20 00:00:00",
        "isFullDays": false,
        "start": "2018-12-18 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-19",
        "isFullDays": true,
        "start": "2018-12-18",
      },
      "parks": [
        1,
      ],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [],
      "title": "Second événement",
    },
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [
        1,
        2,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2018-12-14 12:20:00",
      "description": null,
      "entity": "event",
      "has_missing_materials": null,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": null,
      "id": 3,
      "is_archived": true,
      "is_billable": false,
      "is_confirmed": false,
      "is_departure_inventory_done": true,
      "is_return_inventory_done": true,
      "location": "Brousse",
      "manager": null,
      "materials_count": 23,
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-16 15:45:00",
        "isFullDays": false,
        "start": "2018-12-15 08:30:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-17 00:00:00",
        "isFullDays": false,
        "start": "2018-12-15 09:00:00",
      },
      "parks": [
        1,
      ],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [],
      "title": "Avant-premier événement",
    },
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [
        1,
        3,
      ],
      "color": /* Color Instance => */ "#ef5b5b",
      "created_at": /* DateTime Instance => */ "2019-01-01 20:12:00",
      "description": null,
      "entity": "event",
      "has_missing_materials": true,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 4,
      "is_archived": false,
      "is_billable": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Moon",
      "manager": null,
      "materials_count": 6,
      "mobilization_period": /* Period Instance => */ {
        "end": "2019-04-11 00:00:00",
        "isFullDays": false,
        "start": "2019-03-01 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2019-04-10",
        "isFullDays": true,
        "start": "2019-03-01",
      },
      "parks": [
        1,
        2,
      ],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [],
      "title": "Concert X",
    },
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [
        {
          "company": {
            "country": {
              "code": "FR",
              "id": 1,
              "name": "France",
            },
            "country_id": 1,
            "full_address": "1, company st.
1234 Megacity",
            "id": 1,
            "legal_name": "Testing, Inc",
            "locality": "Megacity",
            "note": "Just for tests",
            "phone": "+4123456789",
            "postal_code": "1234",
            "street": "1, company st.",
          },
          "company_id": 1,
          "country": {
            "code": "FR",
            "id": 1,
            "name": "France",
          },
          "country_id": 1,
          "email": "tester@robertmanager.net",
          "first_name": "Jean",
          "full_address": "1, somewhere av.
1234 Megacity",
          "full_name": "Jean Fountain",
          "id": 1,
          "last_name": "Fountain",
          "locality": "Megacity",
          "note": null,
          "phone": null,
          "postal_code": "1234",
          "reference": "0001",
          "street": "1, somewhere av.",
          "user_id": 1,
        },
      ],
      "categories": [
        4,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2019-12-25 14:59:40",
      "description": null,
      "entity": "event",
      "has_missing_materials": true,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 5,
      "is_archived": false,
      "is_billable": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Saint-Jean-la-Forêt",
      "manager": null,
      "materials_count": 2,
      "mobilization_period": /* Period Instance => */ {
        "end": "2020-01-02 00:00:00",
        "isFullDays": false,
        "start": "2020-01-01 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2020-01-01",
        "isFullDays": true,
        "start": "2020-01-01",
      },
      "parks": [
        1,
      ],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [],
      "title": "Kermesse de l'école des trois cailloux",
    },
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [],
      "color": /* Color Instance => */ "#ef5b5b",
      "created_at": /* DateTime Instance => */ "2019-02-01 12:00:00",
      "description": null,
      "entity": "event",
      "has_missing_materials": false,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 6,
      "is_archived": false,
      "is_billable": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "La Clusaz",
      "manager": null,
      "materials_count": 0,
      "mobilization_period": /* Period Instance => */ {
        "end": "2019-04-02 00:00:00",
        "isFullDays": false,
        "start": "2019-03-15 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2019-04-01",
        "isFullDays": true,
        "start": "2019-03-15",
      },
      "parks": [],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [],
      "title": "Un événement sans inspiration",
    },
    {
      "author": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [
        1,
        2,
        3,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2022-05-29 18:00:00",
      "description": null,
      "entity": "event",
      "has_missing_materials": false,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 7,
      "is_archived": false,
      "is_billable": true,
      "is_confirmed": true,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Machin-le-chateau",
      "manager": {
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "materials_count": 7,
      "mobilization_period": /* Period Instance => */ {
        "end": "2023-05-29 00:00:00",
        "isFullDays": false,
        "start": "2023-05-25 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2023-05-28",
        "isFullDays": true,
        "start": "2023-05-25",
      },
      "parks": [
        1,
        2,
      ],
      "pivot": {
        "quantity": 12,
      },
      "reference": null,
      "technicians": [
        {
          "event_id": 7,
          "id": 3,
          "period": /* Period Instance => */ {
            "end": "2023-05-29 00:00:00",
            "isFullDays": false,
            "start": "2023-05-25 00:00:00",
          },
          "role": {
            "id": 3,
            "is_used": true,
            "name": "Ingénieur du son",
          },
          "technician": {
            "country": {
              "code": "CH",
              "id": 2,
              "name": "Suisse",
            },
            "country_id": 2,
            "email": "client@technicien.com",
            "first_name": "Jean",
            "full_address": null,
            "full_name": "Jean Technicien",
            "id": 2,
            "last_name": "Technicien",
            "locality": null,
            "nickname": null,
            "note": null,
            "phone": "+33645698520",
            "postal_code": null,
            "roles": [
              {
                "id": 2,
                "is_used": true,
                "name": "Technicien plateau",
              },
            ],
            "street": null,
            "user_id": null,
          },
          "technician_id": 2,
        },
      ],
      "title": "Médiévales de Machin-le-chateau 2023",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 7,
    "total": {
      "items": 7,
      "pages": 1,
    },
  },
}
`;

exports[`Materials Api create() parse the returned data correctly (with #1) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 36.5,
    },
    {
      "entities": [
        "material",
      ],
      "id": 2,
      "max_length": null,
      "name": "Couleur",
      "type": "string",
      "value": "Grise",
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 850,
    },
  ],
  "available_quantity": 4,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
  "id": 1,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Console Yamaha CL3",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": "http://loxya.test/materials/1/picture",
  "reference": "CL3",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "19400",
  "return_inventory_todo": null,
  "stock_quantity": 5,
  "sub_category_id": 1,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #2) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 2.2,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 35,
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
  "degressive_rate_id": null,
  "departure_inventory_todo": null,
  "description": "Système de diffusion numérique",
  "id": 2,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Processeur DBX PA2",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "DBXPA2",
  "rental_price": /* Decimal Instance => */ "25.5",
  "replacement_price": /* Decimal Instance => */ "349.9",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 2,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #3) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 0.85,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 150,
    },
  ],
  "available_quantity": 30,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Projecteur PAR64 à LED, avec son set de gélatines",
  "id": 3,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "PAR64 LED",
  "note": "Soyez délicats avec ces projos !",
  "out_of_order_quantity": 4,
  "park_id": 1,
  "picture": null,
  "reference": "PAR64LED",
  "rental_price": /* Decimal Instance => */ "3.5",
  "replacement_price": /* Decimal Instance => */ "89",
  "return_inventory_todo": null,
  "stock_quantity": 34,
  "sub_category_id": 3,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #4) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 3.15,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 60,
    },
    {
      "entities": [
        "material",
      ],
      "id": 4,
      "name": "Conforme",
      "type": "boolean",
      "value": true,
    },
  ],
  "available_quantity": 2,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
  "id": 4,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Showtec SDS-6",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "SDS-6-01",
  "rental_price": /* Decimal Instance => */ "15.95",
  "replacement_price": /* Decimal Instance => */ "59",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 4,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #5) 1`] = `
{
  "attributes": [],
  "available_quantity": 32,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Câble audio XLR 10 mètres, mâle-femelle",
  "id": 5,
  "is_discountable": true,
  "is_hidden_on_bill": true,
  "name": "Câble XLR 10m",
  "note": null,
  "out_of_order_quantity": 8,
  "park_id": 1,
  "picture": null,
  "reference": "XLR10",
  "rental_price": /* Decimal Instance => */ "0.5",
  "replacement_price": /* Decimal Instance => */ "9.5",
  "return_inventory_todo": null,
  "stock_quantity": 40,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 2,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #6) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
        "material",
      ],
      "id": 5,
      "name": "Date d'achat",
      "type": "date",
      "value": /* Day Instance => */ "2021-01-28",
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Mélangeur numérique 18 canaux",
  "id": 6,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Behringer X Air XR18",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": null,
  "reference": "XR18",
  "rental_price": /* Decimal Instance => */ "49.99",
  "replacement_price": /* Decimal Instance => */ "419",
  "return_inventory_todo": null,
  "stock_quantity": 3,
  "sub_category_id": 1,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #7) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 3,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
  "degressive_rate_id": 2,
  "departure_inventory_todo": null,
  "description": "Volume utile: 9.3 m3",
  "id": 7,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Volkswagen Transporter",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 2,
  "picture": null,
  "reference": "Transporter",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "32000",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
}
`;

exports[`Materials Api create() parse the returned data correctly (with #8) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 4,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Forêt mystique, typique des récits fantastiques.",
  "id": 8,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Décor Thème Forêt",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "Decor-Forest",
  "rental_price": /* Decimal Instance => */ "1500",
  "replacement_price": /* Decimal Instance => */ "8500",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 4,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
}
`;

exports[`Materials Api documents() parse the returned data correctly 1`] = `
[
  {
    "created_at": /* DateTime Instance => */ "2021-02-12 13:23:02",
    "id": 1,
    "name": "User-manual.pdf",
    "size": 24681233,
    "type": "application/pdf",
    "url": "http://loxya.test/documents/1",
  },
  {
    "created_at": /* DateTime Instance => */ "2021-02-12 13:25:02",
    "id": 2,
    "name": "warranty.pdf",
    "size": 124068,
    "type": "application/pdf",
    "url": "http://loxya.test/documents/2",
  },
  {
    "created_at": /* DateTime Instance => */ "2023-05-01 15:15:20",
    "id": 3,
    "name": "plan-de-salle.xls",
    "size": 49802,
    "type": "application/vnd.ms-excel",
    "url": "http://loxya.test/documents/3",
  },
  {
    "created_at": /* DateTime Instance => */ "2023-05-02 17:32:05",
    "id": 4,
    "name": "Carte de l'étudiant.png",
    "size": 9397,
    "type": "image/x-png",
    "url": "http://loxya.test/documents/4",
  },
  {
    "created_at": /* DateTime Instance => */ "2023-05-01 15:15:20",
    "id": 5,
    "name": "bon_de_sortie.doc",
    "size": 10014149,
    "type": "application/msword",
    "url": "http://loxya.test/documents/5",
  },
  {
    "created_at": /* DateTime Instance => */ "2023-05-01 15:15:20",
    "id": 6,
    "name": "emploi-du-temps.xls",
    "size": 70001,
    "type": "application/vnd.ms-excel",
    "url": "http://loxya.test/documents/6",
  },
]
`;

exports[`Materials Api one() parse the returned data correctly (with #1) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 36.5,
    },
    {
      "entities": [
        "material",
      ],
      "id": 2,
      "max_length": null,
      "name": "Couleur",
      "type": "string",
      "value": "Grise",
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 850,
    },
  ],
  "available_quantity": 4,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
  "id": 1,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Console Yamaha CL3",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": "http://loxya.test/materials/1/picture",
  "reference": "CL3",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "19400",
  "return_inventory_todo": null,
  "stock_quantity": 5,
  "sub_category_id": 1,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #2) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 2.2,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 35,
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
  "degressive_rate_id": null,
  "departure_inventory_todo": null,
  "description": "Système de diffusion numérique",
  "id": 2,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Processeur DBX PA2",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "DBXPA2",
  "rental_price": /* Decimal Instance => */ "25.5",
  "replacement_price": /* Decimal Instance => */ "349.9",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 2,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #3) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 0.85,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 150,
    },
  ],
  "available_quantity": 30,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Projecteur PAR64 à LED, avec son set de gélatines",
  "id": 3,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "PAR64 LED",
  "note": "Soyez délicats avec ces projos !",
  "out_of_order_quantity": 4,
  "park_id": 1,
  "picture": null,
  "reference": "PAR64LED",
  "rental_price": /* Decimal Instance => */ "3.5",
  "replacement_price": /* Decimal Instance => */ "89",
  "return_inventory_todo": null,
  "stock_quantity": 34,
  "sub_category_id": 3,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #4) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 3.15,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 60,
    },
    {
      "entities": [
        "material",
      ],
      "id": 4,
      "name": "Conforme",
      "type": "boolean",
      "value": true,
    },
  ],
  "available_quantity": 2,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
  "id": 4,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Showtec SDS-6",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "SDS-6-01",
  "rental_price": /* Decimal Instance => */ "15.95",
  "replacement_price": /* Decimal Instance => */ "59",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 4,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #5) 1`] = `
{
  "attributes": [],
  "available_quantity": 32,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Câble audio XLR 10 mètres, mâle-femelle",
  "id": 5,
  "is_discountable": true,
  "is_hidden_on_bill": true,
  "name": "Câble XLR 10m",
  "note": null,
  "out_of_order_quantity": 8,
  "park_id": 1,
  "picture": null,
  "reference": "XLR10",
  "rental_price": /* Decimal Instance => */ "0.5",
  "replacement_price": /* Decimal Instance => */ "9.5",
  "return_inventory_todo": null,
  "stock_quantity": 40,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 2,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #6) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
        "material",
      ],
      "id": 5,
      "name": "Date d'achat",
      "type": "date",
      "value": /* Day Instance => */ "2021-01-28",
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Mélangeur numérique 18 canaux",
  "id": 6,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Behringer X Air XR18",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": null,
  "reference": "XR18",
  "rental_price": /* Decimal Instance => */ "49.99",
  "replacement_price": /* Decimal Instance => */ "419",
  "return_inventory_todo": null,
  "stock_quantity": 3,
  "sub_category_id": 1,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #7) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 3,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
  "degressive_rate_id": 2,
  "departure_inventory_todo": null,
  "description": "Volume utile: 9.3 m3",
  "id": 7,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Volkswagen Transporter",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 2,
  "picture": null,
  "reference": "Transporter",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "32000",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
}
`;

exports[`Materials Api one() parse the returned data correctly (with #8) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 4,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Forêt mystique, typique des récits fantastiques.",
  "id": 8,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Décor Thème Forêt",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "Decor-Forest",
  "rental_price": /* Decimal Instance => */ "1500",
  "replacement_price": /* Decimal Instance => */ "8500",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 4,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #1) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 36.5,
    },
    {
      "entities": [
        "material",
      ],
      "id": 2,
      "max_length": null,
      "name": "Couleur",
      "type": "string",
      "value": "Grise",
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 850,
    },
  ],
  "available_quantity": 4,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
  "id": 1,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Console Yamaha CL3",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": "http://loxya.test/materials/1/picture",
  "reference": "CL3",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "19400",
  "return_inventory_todo": null,
  "stock_quantity": 5,
  "sub_category_id": 1,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #2) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 2.2,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 35,
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
  "degressive_rate_id": null,
  "departure_inventory_todo": null,
  "description": "Système de diffusion numérique",
  "id": 2,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Processeur DBX PA2",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "DBXPA2",
  "rental_price": /* Decimal Instance => */ "25.5",
  "replacement_price": /* Decimal Instance => */ "349.9",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 2,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #3) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 0.85,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 150,
    },
  ],
  "available_quantity": 30,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Projecteur PAR64 à LED, avec son set de gélatines",
  "id": 3,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "PAR64 LED",
  "note": "Soyez délicats avec ces projos !",
  "out_of_order_quantity": 4,
  "park_id": 1,
  "picture": null,
  "reference": "PAR64LED",
  "rental_price": /* Decimal Instance => */ "3.5",
  "replacement_price": /* Decimal Instance => */ "89",
  "return_inventory_todo": null,
  "stock_quantity": 34,
  "sub_category_id": 3,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #4) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 3.15,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 60,
    },
    {
      "entities": [
        "material",
      ],
      "id": 4,
      "name": "Conforme",
      "type": "boolean",
      "value": true,
    },
  ],
  "available_quantity": 2,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
  "id": 4,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Showtec SDS-6",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "SDS-6-01",
  "rental_price": /* Decimal Instance => */ "15.95",
  "replacement_price": /* Decimal Instance => */ "59",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 4,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #5) 1`] = `
{
  "attributes": [],
  "available_quantity": 32,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Câble audio XLR 10 mètres, mâle-femelle",
  "id": 5,
  "is_discountable": true,
  "is_hidden_on_bill": true,
  "name": "Câble XLR 10m",
  "note": null,
  "out_of_order_quantity": 8,
  "park_id": 1,
  "picture": null,
  "reference": "XLR10",
  "rental_price": /* Decimal Instance => */ "0.5",
  "replacement_price": /* Decimal Instance => */ "9.5",
  "return_inventory_todo": null,
  "stock_quantity": 40,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 2,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #6) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
        "material",
      ],
      "id": 5,
      "name": "Date d'achat",
      "type": "date",
      "value": /* Day Instance => */ "2021-01-28",
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Mélangeur numérique 18 canaux",
  "id": 6,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Behringer X Air XR18",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": null,
  "reference": "XR18",
  "rental_price": /* Decimal Instance => */ "49.99",
  "replacement_price": /* Decimal Instance => */ "419",
  "return_inventory_todo": null,
  "stock_quantity": 3,
  "sub_category_id": 1,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #7) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 3,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
  "degressive_rate_id": 2,
  "departure_inventory_todo": null,
  "description": "Volume utile: 9.3 m3",
  "id": 7,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Volkswagen Transporter",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 2,
  "picture": null,
  "reference": "Transporter",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "32000",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
}
`;

exports[`Materials Api restore() parse the returned data correctly (with #8) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 4,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Forêt mystique, typique des récits fantastiques.",
  "id": 8,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Décor Thème Forêt",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "Decor-Forest",
  "rental_price": /* Decimal Instance => */ "1500",
  "replacement_price": /* Decimal Instance => */ "8500",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 4,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #1) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 36.5,
    },
    {
      "entities": [
        "material",
      ],
      "id": 2,
      "max_length": null,
      "name": "Couleur",
      "type": "string",
      "value": "Grise",
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 850,
    },
  ],
  "available_quantity": 4,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
  "id": 1,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Console Yamaha CL3",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": "http://loxya.test/materials/1/picture",
  "reference": "CL3",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "19400",
  "return_inventory_todo": null,
  "stock_quantity": 5,
  "sub_category_id": 1,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #2) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 2.2,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 35,
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
  "degressive_rate_id": null,
  "departure_inventory_todo": null,
  "description": "Système de diffusion numérique",
  "id": 2,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Processeur DBX PA2",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "DBXPA2",
  "rental_price": /* Decimal Instance => */ "25.5",
  "replacement_price": /* Decimal Instance => */ "349.9",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 2,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #3) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 0.85,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 150,
    },
  ],
  "available_quantity": 30,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Projecteur PAR64 à LED, avec son set de gélatines",
  "id": 3,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "PAR64 LED",
  "note": "Soyez délicats avec ces projos !",
  "out_of_order_quantity": 4,
  "park_id": 1,
  "picture": null,
  "reference": "PAR64LED",
  "rental_price": /* Decimal Instance => */ "3.5",
  "replacement_price": /* Decimal Instance => */ "89",
  "return_inventory_todo": null,
  "stock_quantity": 34,
  "sub_category_id": 3,
  "tags": [
    {
      "id": 1,
      "name": "Premium",
    },
  ],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #4) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
      ],
      "id": 1,
      "is_totalisable": true,
      "name": "Poids",
      "type": "float",
      "unit": "kg",
      "value": 3.15,
    },
    {
      "entities": [
        "material",
      ],
      "id": 3,
      "is_totalisable": true,
      "name": "Puissance",
      "type": "integer",
      "unit": "W",
      "value": 60,
    },
    {
      "entities": [
        "material",
      ],
      "id": 4,
      "name": "Conforme",
      "type": "boolean",
      "value": true,
    },
  ],
  "available_quantity": 2,
  "category_id": 2,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
  "id": 4,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Showtec SDS-6",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "SDS-6-01",
  "rental_price": /* Decimal Instance => */ "15.95",
  "replacement_price": /* Decimal Instance => */ "59",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": 4,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #5) 1`] = `
{
  "attributes": [],
  "available_quantity": 32,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Câble audio XLR 10 mètres, mâle-femelle",
  "id": 5,
  "is_discountable": true,
  "is_hidden_on_bill": true,
  "name": "Câble XLR 10m",
  "note": null,
  "out_of_order_quantity": 8,
  "park_id": 1,
  "picture": null,
  "reference": "XLR10",
  "rental_price": /* Decimal Instance => */ "0.5",
  "replacement_price": /* Decimal Instance => */ "9.5",
  "return_inventory_todo": null,
  "stock_quantity": 40,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 2,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #6) 1`] = `
{
  "attributes": [
    {
      "entities": [
        "material",
        "material",
      ],
      "id": 5,
      "name": "Date d'achat",
      "type": "date",
      "value": /* Day Instance => */ "2021-01-28",
    },
  ],
  "available_quantity": 2,
  "category_id": 1,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
  "degressive_rate_id": 1,
  "departure_inventory_todo": null,
  "description": "Mélangeur numérique 18 canaux",
  "id": 6,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Behringer X Air XR18",
  "note": null,
  "out_of_order_quantity": 1,
  "park_id": 1,
  "picture": null,
  "reference": "XR18",
  "rental_price": /* Decimal Instance => */ "49.99",
  "replacement_price": /* Decimal Instance => */ "419",
  "return_inventory_todo": null,
  "stock_quantity": 3,
  "sub_category_id": 1,
  "tags": [],
  "tax_id": 1,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #7) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 3,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
  "degressive_rate_id": 2,
  "departure_inventory_todo": null,
  "description": "Volume utile: 9.3 m3",
  "id": 7,
  "is_discountable": false,
  "is_hidden_on_bill": false,
  "name": "Volkswagen Transporter",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 2,
  "picture": null,
  "reference": "Transporter",
  "rental_price": /* Decimal Instance => */ "300",
  "replacement_price": /* Decimal Instance => */ "32000",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": null,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
}
`;

exports[`Materials Api update() parse the returned data correctly (with #8) 1`] = `
{
  "attributes": [],
  "available_quantity": 2,
  "category_id": 4,
  "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
  "degressive_rate_id": 3,
  "departure_inventory_todo": null,
  "description": "Forêt mystique, typique des récits fantastiques.",
  "id": 8,
  "is_discountable": true,
  "is_hidden_on_bill": false,
  "name": "Décor Thème Forêt",
  "note": null,
  "out_of_order_quantity": 0,
  "park_id": 1,
  "picture": null,
  "reference": "Decor-Forest",
  "rental_price": /* Decimal Instance => */ "1500",
  "replacement_price": /* Decimal Instance => */ "8500",
  "return_inventory_todo": null,
  "stock_quantity": 2,
  "sub_category_id": null,
  "tags": [],
  "tax_id": 4,
  "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
}
`;
